--- a/style/main.css
+++ b/style/main.css
@@ -60,6 +60,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+#container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 a, a:visited, a:hover {
 	text-decoration: none;
 	color:#3B61EC;
@@ -209,6 +214,7 @@ nav a {
 	text-align: left;
 	color:rgb(245, 8, 213);
 	font-family: ".tk-adobe-garamond-pro-1",serif;
+  font-size: 20px;
 }
 
 nav a:last-child {
@@ -276,6 +282,17 @@ footer section {
 #mc_embed_signup .asterisk, #mc_embed_signup .indicates-required {
 	display: none;
 }
+
+@media (max-width : 757px) {
+  .coverbox {
+    font-size: 46px;
+    line-height: 95px;
+  }
+  nav a {
+    width: 14%;
+    text-align: center;
+    font-size: 12px;
+  }
 
 @media (max-device-width : 320px) {
 	body {
