--- a/style/main.css
+++ b/style/main.css
@@ -60,7 +60,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-#container {
+#inner-container {
   max-width: 800px;
   margin: 0 auto;
 }
